--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "element-plus": "^2.3.1",
     "normalize.css": "^8.0.1",
     "vue": "^3.2.47"
   },
