--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/mockjs": "^1.0.7",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
