--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sass": "^1.59.3",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.2.0"
   }
 }
