--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.3.4",
+    "countup.js": "^2.6.0",
     "element-plus": "^2.3.1",
     "js-cookie": "^3.0.1",
     "normalize.css": "^8.0.1",
@@ -26,7 +27,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/js-cookie": "^3.0.3",
     "@types/mockjs": "^1.0.7",
-    "@types/node": "^18.14.2",
+    "@types/node": "^18.15.12",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
