--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.3.4",
     "countup.js": "^2.6.0",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.1",
     "js-cookie": "^3.0.1",
     "normalize.css": "^8.0.1",
