--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
+    "screenfull": "^6.0.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
