--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@vueuse/core": "^10.2.1",
     "axios": "^1.3.4",
     "countup.js": "^2.6.0",
     "echarts": "^5.4.2",
-    "element-plus": "^2.3.1",
+    "element-plus": "^2.3.8",
     "js-cookie": "^3.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
