wip：tinymce 富文本

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": [
     "env.d.ts",
-    "global.d.ts",
+    "window.d.ts",
     "src/**/*",
     "src/**/*.vue",
     "mock"
