--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@element-plus/icons-vue": "^2.1.0",
+    "@types/uuid": "^9.0.2",
     "@vueuse/core": "^10.2.1",
     "axios": "^1.3.4",
     "countup.js": "^2.6.0",
@@ -24,6 +25,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
     "screenfull": "^6.0.2",
+    "uuid": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
