--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,18 @@
     "src/**/*.vue",
     "mock"
   ],
+  "lib": [
+    "dom"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "preserveValueImports": false,
   "references": [
